add terraform vars + doc update

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ terraform/terraform.tfstate.backup
 terraform/.terraform/
 terraform/.terraform.tfstate.lock.info
 ansible/inventory/group_vars/all/vault.yml
+terraform/variables.tf
